--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -43,6 +43,6 @@ jobs:
             steps:
               - uses: actions/checkout@v1
               - name: "hello-action"
-                uses: ./.github/actions/hello-world
+                uses: ../.github/actions/hello-world
 		with:
 		  first-greeting: "Learning Lab User"
